--- a/javascript/lab3-4/index.html
+++ b/javascript/lab3-4/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Тест по программированию</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
-<body>
-	
+<body>	
+	<script src='js/script.js'></script>
 </body>
 </html>
