--- a/javascript/lab5-6/index.html
+++ b/javascript/lab5-6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Timer</title>
+	<title>Stopwatch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
