--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -12,13 +12,13 @@
 				<a href="#" class="logo"></a>
 				<nav class="header-menu">
 					<ul class="header-menu-dropdown__active">
-						<li class="header-menu-dropdown__active-item"><a class="header-menu-dropdown__active-link"href="#">Home</a>
+						<li class="header-menu-dropdown__active-item"><a class="header-menu-dropdown__active-link"href="#"><span class="header-menu-dropdown__active-link-span">Home</span></a>
 							<ul class="header-menu-dropdown__submenu">
-								<li class="header-menu-dropdown__submenu-item"><a href="#" class="menu-dropdown__submenu-link">About</a></li>
-								<li class="header-menu-dropdown__submenu-item"><a href="" class="menu-dropdown__submenu-link">Blog</a></li>
-								<li class="header-menu-dropdown__submenu-item"><a href="" class="menu-dropdown__submenu-link">Products</a></li>
-								<li class="header-menu-dropdown__submenu-item"><a href="" class="menu-dropdown__submenu-link">Lorem ip sum</a></li>
-								<li class="header-menu-dropdown__submenu-item"><a href="" class="menu-dropdown__submenu-link">Dolor sit amet</a></li>
+								<li class="header-menu-dropdown__submenu-item"><a href="#" class="header-menu-dropdown__submenu-link">About</a></li>
+								<li class="header-menu-dropdown__submenu-item"><a href="" class="header-menu-dropdown__submenu-link">Blog</a></li>
+								<li class="header-menu-dropdown__submenu-item"><a href="" class="header-menu-dropdown__submenu-link">Products</a></li>
+								<li class="header-menu-dropdown__submenu-item"><a href="" class="header-menu-dropdown__submenu-link">Lorem ip sum</a></li>
+								<li class="header-menu-dropdown__submenu-item"><a href="" class="header-menu-dropdown__submenu-link">Dolor sit amet</a></li>
 							</ul>
 						</li>
 					</ul>
