--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -23,6 +23,21 @@
 						</li>
 					</ul>
 				</nav>
+				<section class="header-slider">
+					<div class="header-slider__bg">
+						<div class="header-slider__text">
+							<p class="header-slider__text-title">Lorem Ipsum Dolor</p>
+							<p class="header-slider__text-subtitle">IT WILL MAKE ALL OF YOUR DREAMS COME</p>
+							<p class="header-slider__text-content">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
+						</div>
+						<div class="header-slider__img">
+							
+						</div>
+					</div>
+					<div class="header-slider__nav">
+						
+					</div>
+				</section>
 				<br>
 				<br>
 				<br>
