--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>PINGBULLER</title>
-		<link rel="stylesheet" href="css/normalize.css">
+		<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
@@ -35,23 +35,34 @@
 						</div>
 					</div>
 					<div class="header-slider__nav">
-						
+						<ul class="header-slider__nav-item">
+							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
+						</ul>
 					</div>
 				</section>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
 			</div>
 		</header>
 		<!-- ------------------------HEADER------------------------ -->
 		<div class="sub-header">
 			<div class="wrapper">
-				SUB-HEADER
+				<div class="sub-header__box">
+					<p class="sub-header__title">About our company</p>
+					<p class="sub-header__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+					<p class="sub-header__more"><a href="#" class="sub-header__link">Read more</a></p>
+				</div>
+				<div class="sub-header__box">
+					<p class="sub-header__title">About our company</p>
+					<p class="sub-header__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+					<p class="sub-header__more"><a href="#" class="sub-header__link">Read more</a></p>
+				</div>
+				<div class="sub-header__box">
+					<p class="sub-header__title">About our company</p>
+					<p class="sub-header__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
+					<p class="sub-header__more"><a href="#" class="sub-header__link">Read more</a></p>
+				</div>
 			</div>
 		</div>
 		<!-- ------------------------SUB-HEADER------------------------ -->
