finished progect for 320px

--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -36,10 +36,10 @@
 					</div>
 					<div class="header-slider__nav">
 						<ul class="header-slider__nav-item">
-							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
-							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
-							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
-							<li class="header-slider__nav-list"><a href="" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="#" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="#" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="#" class="header-slider__nav-link"></a></li>
+							<li class="header-slider__nav-list"><a href="#" class="header-slider__nav-link"></a></li>
 						</ul>
 					</div>
 				</section>
@@ -68,19 +68,66 @@
 		<!-- ------------------------SUB-HEADER------------------------ -->
 		<div class="content">
 			<div class="wrapper">
-				CONTENT
+				<div class="content-posts">
+					<div class="content-posts__article">
+						<div class="content-posts__header">
+							<p class="content-posts__author">Pingbuller</p>
+							<p class="content-posts__title">Starts here</p>
+						</div>	
+						<p class="content-posts-text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar </p>
+					</div>
+					<ul class="content-slider__item">
+						<li class="content-slider__list"><a href="#" class="content-slider__link"></a></li>
+						<li class="content-slider__list"><a href="#" class="content-slider__link"></a></li>
+						<li class="content-slider__list"><a href="#" class="content-slider__link"></a></li>
+						<li class="content-slider__list"><a href="#" class="content-slider__link"></a></li>
+					</ul>
+				</div>
+				<div class="content-updates">
+					<p class="content-updates__header">Recent updates</p>
+					<div class="content-updates__article">
+						<p class="content-updates__title">Nunc turpis neque</p>
+						<p class="content-updates__info">Posted by Admin on March 13</p>
+					</div>
+					<div class="content-updates__article">
+						<p class="content-updates__title">Nunc turpis neque</p>
+						<p class="content-updates__info">Posted by Admin on March 13</p>
+					</div>
+					<div class="content-updates__article">
+						<p class="content-updates__title">Nunc turpis neque</p>
+						<p class="content-updates__info">Posted by Admin on March 13</p>
+					</div>
+					<a href="#" class="content-updates__more">MORE BLOG POSTS</a>
+				</div>
 			</div>
 		</div>
 		<!-- ------------------------CONTENT------------------------ -->
 		<div class="logos">
 			<div class="wrapper">
-				LOGOS
+				<div class="logos__box">
+					<img src="img/logo_logos_1.png" alt="" class="logos__img">
+				</div>
+				<div class="logos__box">
+					<img src="img/logo_logos_2.png" alt="" class="logos__img">
+				</div>
+				<div class="logos__box">
+					<img src="img/logo_logos_3.png" alt="" class="logos__img">
+				</div>
+				<div class="logos__box">
+					<img src="img/logo_logos_4.png" alt="" class="logos__img">
+				</div>
+				<div class="logos__box">
+					<img src="img/logo_logos_5.png" alt="" class="logos__img">
+				</div>
+				<div class="logos__box">
+					<img src="img/logo_logos_6.png" alt="" class="logos__img">
+				</div>
 			</div>
 		</div>
 		<!-- ------------------------LOGOS------------------------ -->
 		<footer class="footer">
 			<div class="wrapper">
-				FOOTER
+				<p class="footer__copyright">Designed by <span class="footer__copyright-company">Pingbuller AS</span></p>
 			</div>
 		</footer>
 		<!-- ------------------------FOOTER------------------------ -->
