--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -2,9 +2,10 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>PINGBULLER</title>
-		<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/mediaqueries.css">
 	</head>
 	<body>
 		<header class="header">
@@ -31,7 +32,7 @@
 							<p class="header-slider__text-content">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
 						</div>
 						<div class="header-slider__img">
-							
+							<img src="img/img_iphone.png" alt="" class="header-slider__img-phone">
 						</div>
 					</div>
 					<div class="header-slider__nav">
@@ -44,6 +45,7 @@
 					</div>
 				</section>
 			</div>
+			<div class="header__opacity-bg"></div>
 		</header>
 		<!-- ------------------------HEADER------------------------ -->
 		<div class="sub-header">
