Finished project tabs

--- a/javascript/lab7-8/project_tabs/index.html
+++ b/javascript/lab7-8/project_tabs/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Tabs</title>
 	<link rel="stylesheet" href="css/style.css">
+	<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -22,6 +24,7 @@
 			<div id="tabs-2" class="tabs-content__item">
 				<h3 class="tabs-content__title">Вкладка 2</h3>
 				<p class="tabs-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore reprehenderit dignissimos non voluptatem id accusamus placeat repellendus est, iusto, omnis sapiente quibusdam aliquid. Voluptas sapiente omnis explicabo amet error illo quaerat expedita nemo autem, saepe ea, quibusdam accusamus magni inventore reiciendis adipisci eum. Harum soluta assumenda a, nesciunt ratione, autem.</p>
+				<p class="tabs-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum neque ipsa quod deserunt! Quo sint, omnis accusantium vitae laudantium, iusto animi ex, iure nostrum aut officia neque velit libero harum. Similique laudantium dolorem fuga in eaque saepe numquam velit quos provident eveniet aliquid eum aspernatur, et, tempore placeat totam veritatis.</p><p class="tabs-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum neque ipsa quod deserunt! Quo sint, omnis accusantium vitae laudantium, iusto animi ex, iure nostrum aut officia neque velit libero harum. Similique laudantium dolorem fuga in eaque saepe numquam velit quos provident eveniet aliquid eum aspernatur, et, tempore placeat totam veritatis.</p><p class="tabs-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum neque ipsa quod deserunt! Quo sint, omnis accusantium vitae laudantium, iusto animi ex, iure nostrum aut officia neque velit libero harum. Similique laudantium dolorem fuga in eaque saepe numquam velit quos provident eveniet aliquid eum aspernatur, et, tempore placeat totam veritatis.</p>
 			</div>
 			<div id="tabs-3" class="tabs-content__item">
 				<h3 class="tabs-content__title">Вкладка 3</h3>
