--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -76,7 +76,7 @@
 							<p class="content-posts__author">Pingbuller</p>
 							<p class="content-posts__title">Starts here</p>
 						</div>	
-						<p class="content-posts-text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar </p>
+						<p class="content-posts-text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.” </p>
 					</div>
 					<ul class="content-slider__item">
 						<li class="content-slider__list"><a href="#" class="content-slider__link"></a></li>
@@ -88,16 +88,16 @@
 				<div class="content-updates">
 					<p class="content-updates__header">Recent updates</p>
 					<div class="content-updates__article">
-						<p class="content-updates__title">Nunc turpis neque</p>
-						<p class="content-updates__info">Posted by Admin on March 13</p>
+						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
+						<p class="content-updates__info">Posted by Admin on March 13 2012</p>
 					</div>
 					<div class="content-updates__article">
-						<p class="content-updates__title">Nunc turpis neque</p>
-						<p class="content-updates__info">Posted by Admin on March 13</p>
+						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
+						<p class="content-updates__info">Posted by Admin on March 13 2012</p>
 					</div>
 					<div class="content-updates__article">
-						<p class="content-updates__title">Nunc turpis neque</p>
-						<p class="content-updates__info">Posted by Admin on March 13</p>
+						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
+						<p class="content-updates__info">Posted by Admin on March 13 2012</p>
 					</div>
 					<a href="#" class="content-updates__more">MORE BLOG POSTS</a>
 				</div>
@@ -106,32 +106,62 @@
 		<!-- ------------------------CONTENT------------------------ -->
 		<div class="logos">
 			<div class="wrapper">
-				<div class="logos__box">
-					<img src="img/logo_logos_1.png" alt="" class="logos__img">
-				</div>
-				<div class="logos__box">
-					<img src="img/logo_logos_2.png" alt="" class="logos__img">
-				</div>
-				<div class="logos__box">
-					<img src="img/logo_logos_3.png" alt="" class="logos__img">
-				</div>
-				<div class="logos__box">
-					<img src="img/logo_logos_4.png" alt="" class="logos__img">
-				</div>
-				<div class="logos__box">
-					<img src="img/logo_logos_5.png" alt="" class="logos__img">
-				</div>
-				<div class="logos__box">
-					<img src="img/logo_logos_6.png" alt="" class="logos__img">
+				<div class="logos__container">
+					<div class="logos__box">
+						<img src="img/logo_logos_1.png" alt="" class="logos__img">
+					</div>
+					<div class="logos__box">
+						<img src="img/logo_logos_2.png" alt="" class="logos__img">
+					</div>
+					<div class="logos__box">
+						<img src="img/logo_logos_3.png" alt="" class="logos__img">
+					</div>
+					<div class="logos__box">
+						<img src="img/logo_logos_4.png" alt="" class="logos__img">
+					</div>
+					<div class="logos__box">
+						<img src="img/logo_logos_5.png" alt="" class="logos__img">
+					</div>
+					<div class="logos__box">
+						<img src="img/logo_logos_6.png" alt="" class="logos__img">
+					</div>
 				</div>
 			</div>
 		</div>
 		<!-- ------------------------LOGOS------------------------ -->
+		<div class="sub-content">
+			<div class="wrapper">
+				<div class="sub-content__item">
+					<div class="sub-content__article">
+						<h3 class="sub-content__header">NEWS CATEGORIES</h3>
+						<p class="sub-content__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Ma</p>
+					</div>
+					<div class="sub-content__article">
+						<h3 class="sub-content__header">NEWS CATEGORIES</h3>
+						<p class="sub-content__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Ma</p>
+					</div>
+					<div class="sub-content__article">
+						<h3 class="sub-content__header">NEWS CATEGORIES</h3>
+						<p class="sub-content__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Ma</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ------------------------SUB-CONTENT------------------------ -->
 		<footer class="footer">
 			<div class="wrapper">
+				<div class="footer-menu">
+					<ul class="footer-menu__item">
+						<li class="footer-menu__list"><a href="#" class="footer-menu__link">Home</a></li>
+						<li class="footer-menu__list"><a href="#" class="footer-menu__link">About</a></li>
+						<li class="footer-menu__list"><a href="#" class="footer-menu__link">Blog</a></li>
+						<li class="footer-menu__list"><a href="#" class="footer-menu__link">Products</a></li>
+						<li class="footer-menu__list"><a href="#" class="footer-menu__link">Lorem ipsum</a></li>
+						<li class="footer-menu__list"><a href="#" class="footer-menu__link">Dolor sit amet</a></li>
+					</ul>
+				</div>
 				<p class="footer__copyright">Designed by <span class="footer__copyright-company">Pingbuller AS</span></p>
 			</div>
 		</footer>
 		<!-- ------------------------FOOTER------------------------ -->
 	</body>
-	</html>
