Added maket 768px

--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -11,7 +11,7 @@
 		<header class="header">
 			<div class="wrapper">
 				<a href="#" class="logo"></a>
-				<nav class="header-menu">
+				<nav class="header-menu-dropdown">
 					<ul class="header-menu-dropdown__active">
 						<li class="header-menu-dropdown__active-item"><a class="header-menu-dropdown__active-link"href="#"><span class="header-menu-dropdown__active-link-span">Home</span></a>
 							<ul class="header-menu-dropdown__submenu">
@@ -22,6 +22,16 @@
 								<li class="header-menu-dropdown__submenu-item"><a href="" class="header-menu-dropdown__submenu-link">Dolor sit amet</a></li>
 							</ul>
 						</li>
+					</ul>
+				</nav>
+				<nav class="header-menu-horizontal">
+					<ul class="header-menu-horizontal__item">
+						<li class="header-menu-horizontal__list"><a href="#" class="header-menu-horizontal__link">Home</a></li>
+						<li class="header-menu-horizontal__list"><a href="#" class="header-menu-horizontal__link">About</a></li>
+						<li class="header-menu-horizontal__list"><a href="#" class="header-menu-horizontal__link">Blog</a></li>
+						<li class="header-menu-horizontal__list"><a href="#" class="header-menu-horizontal__link">Products</a></li>
+						<li class="header-menu-horizontal__list"><a href="#" class="header-menu-horizontal__link">Lorem ipsum</a></li>
+						<li class="header-menu-horizontal__list"><a href="#" class="header-menu-horizontal__link">Dolor sit amet</a></li>
 					</ul>
 				</nav>
 				<section class="header-slider">
