added mediaqueries for 960px

--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="wrapper">
+			<div class="wrapper wrapper-header">
 				<a href="#" class="logo"></a>
 				<nav class="header-menu-dropdown">
 					<ul class="header-menu-dropdown__active">
@@ -99,15 +99,15 @@
 					<p class="content-updates__header">Recent updates</p>
 					<div class="content-updates__article">
 						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
-						<p class="content-updates__info">Posted by Admin on March 13 2012</p>
+						<p class="content-updates__info">Posted by Admin on March 13 2012 in Recent News</p>
 					</div>
 					<div class="content-updates__article">
 						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
-						<p class="content-updates__info">Posted by Admin on March 13 2012</p>
+						<p class="content-updates__info">Posted by Admin on March 13 2012 in Category</p>
 					</div>
 					<div class="content-updates__article">
 						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
-						<p class="content-updates__info">Posted by Admin on March 13 2012</p>
+						<p class="content-updates__info">Posted by Admin on March 13 2012 in Blog Updates</p>
 					</div>
 					<a href="#" class="content-updates__more">MORE BLOG POSTS</a>
 				</div>
