--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -36,15 +36,17 @@
 				</nav>
 				<section class="header-slider">
 					<div class="header-slider__bg">
-						<div class="header-slider__text">
-							<p class="header-slider__text-title">Lorem Ipsum Dolor</p>
-							<p class="header-slider__text-subtitle">IT WILL MAKE ALL OF YOUR DREAMS COME</p>
-							<p class="header-slider__text-content">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
-						</div>
-						<div class="header-slider__img">
-							<img src="img/img_iphone.png" alt="" class="header-slider__img-phone">
-						</div>
-					</div>
+			            <div class="slider">
+			              <div class="header-slider__text">
+			                <h1 class="header-slider__text-title">
+			                  lorem ipsum dolor</h1>
+			                <h3 class="header-slider__text-title header-slider__text-second">It will make all of your dreams come true</h3>
+			                <p class="header-slider__text-content">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc,
+			                  imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
+			              </div>
+			              <img class="header-slider__img" src="img/img_iphone.png" alt="phone">
+			            </div>
+			          </div>
 					<div class="header-slider__nav">
 						<ul class="header-slider__nav-item">
 							<li class="header-slider__nav-list"><a href="#" class="header-slider__nav-link"></a></li>
@@ -55,7 +57,6 @@
 					</div>
 				</section>
 			</div>
-			<div class="header__opacity-bg"></div>
 		</header>
 		<!-- ------------------------HEADER------------------------ -->
 		<div class="sub-header">
@@ -66,12 +67,12 @@
 					<p class="sub-header__more"><a href="#" class="sub-header__link">Read more</a></p>
 				</div>
 				<div class="sub-header__box">
-					<p class="sub-header__title">About our company</p>
+					<p class="sub-header__title sub-header__title--talks">About our company</p>
 					<p class="sub-header__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
 					<p class="sub-header__more"><a href="#" class="sub-header__link">Read more</a></p>
 				</div>
 				<div class="sub-header__box">
-					<p class="sub-header__title">About our company</p>
+					<p class="sub-header__title sub-header__title--music">About our company</p>
 					<p class="sub-header__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</p>
 					<p class="sub-header__more"><a href="#" class="sub-header__link">Read more</a></p>
 				</div>
@@ -142,12 +143,17 @@
 		<div class="sub-content">
 			<div class="wrapper">
 				<div class="sub-content__item">
-					<div class="sub-content__article">
+					<div class="sub-content__bonus">
+						<h3 class="sub-content__bonus-header">pingbull<span class="sub-content__bonus-second">er</span></h3>
+						<p class="sub-content__bonus-info">Copyright 2013, Pingbull AS</p>
+						<p class="sub-content__bonus-text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Ma</p>
+					</div>
+					<div class="sub-content__article sub-content__bonus--hidden">
 						<h3 class="sub-content__header">NEWS CATEGORIES</h3>
 						<p class="sub-content__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Ma</p>
 					</div>
 					<div class="sub-content__article">
-						<h3 class="sub-content__header">NEWS CATEGORIES</h3>
+						<h3 class="sub-content__header">Recent comments</h3>
 						<p class="sub-content__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Ma</p>
 					</div>
 					<div class="sub-content__article">
