Started pixel perfect

--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -110,7 +110,7 @@
 						<p class="content-updates__title">Nunc turpis neque feugiat eget</p>
 						<p class="content-updates__info">Posted by Admin on March 13 2012 in Blog Updates</p>
 					</div>
-					<a href="#" class="content-updates__more">MORE BLOG POSTS</a>
+					<a href="#" class="content-updates__more">read more here</a>
 				</div>
 			</div>
 		</div>
