--- a/html_css/lab7-2_attempt2/index.html
+++ b/html_css/lab7-2_attempt2/index.html
@@ -6,6 +6,7 @@
 		<title>PINGBULLER</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mediaqueries.css">
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	</head>
 	<body>
 		<header class="header">
