Modifed form lab7-8 js

--- a/javascript/lab7-8/project_form/index.html
+++ b/javascript/lab7-8/project_form/index.html
@@ -8,21 +8,25 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
-<form action="">
-	<fieldset>
-		<div class="first-field">
-			<label for="firstname">Firstname</label><input type="text" id="firstname" name="firstname">
-			<span>Please provide your first name.</span>
-		</div>
-		<div class="second-field">
-			<label for="lastname">Lastname</label><input type="text" id="lastname" name="lastname">
-			<span>Please provide also your lastname.</span>
-		</div>
-		<div class="thierd-field">
-			<label for="user-address">Address</label><input type="text" id="user-address" name="user-address">
-			<span>Your home or work address.</span>
-		</div>
-	</fieldset>
-</form>
+	<div class="wrapper">
+		<form action="">
+			<fieldset>
+				<div class="fields">
+					<label for="firstname">Firstname</label><input type="text" id="firstname" name="firstname">
+					<span>Please provide your first name.</span>
+				</div>
+				<div class="fields">
+					<label for="lastname">Lastname</label><input type="text" id="lastname" name="lastname">
+					<span>Please provide also your lastname.</span>
+				</div>
+				<div class="fields">
+					<label for="user-address">Address</label><input type="text" id="user-address" name="user-address">
+					<span>Your home or work address.</span>
+				</div>
+			</fieldset>
+
+			<button>Show help</button>
+		</form>
+	</div>
 </body>
 </html>
