--- a/html_css/lab9/index.html
+++ b/html_css/lab9/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>PINGBULLER</title>
-		<!--[if !IE]>
+		<![if !IE]>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mediaqueries.css">
-		<![endif]-->
+		<![endif]>
 
-		<!--[if IE 8]><link href="css/ie8.css" rel="stylesheet" type="text/css"/><![endif]-->
+		<!--[if lt IE 9]><link href="css/ie8.css" rel="stylesheet" type="text/css"/><![endif]-->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<script src="https://raw.githubusercontent.com/aFarkas/html5shiv/master/src/html5shiv.js"></script>
