--- a/javascript/lab9-10/index.html
+++ b/javascript/lab9-10/index.html
@@ -3,30 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>jCarousel, </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/uniform.agent.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/jquery.jcarousel.js"></script>
+    <script src="js/jquery.uniform.js"></script>
+
     <script src="js/script.js"></script>
 </head>
 
 <body>
-<div class="wrapper">
+    <div class="wrapper">
 
-    <div class="jcarousel-wrapper">
-        <div class="jcarousel">
-            <ul>
-                <li><img src="img/img-saleen-s7-tt.jpg" alt=""></li>
-                <li><img src="img/img-aston-martin-one-77.jpg" alt=""></li>
-                <li><img src="img/img-lamborghini-veneno-roadster.jpg" alt=""></li>
-                <li><img src="img/img-ssc-ultimate-aero.jpg" alt=""></li>
-                <li><img src="img/img-zenvo-st1.jpg" alt=""></li>
-            </ul>
+        <div class="jcarousel-wrapper">
+            <div class="jcarousel">
+                <ul>
+                    <li><img src="img/img-saleen-s7-tt.jpg" alt=""></li>
+                    <li><img src="img/img-aston-martin-one-77.jpg" alt=""></li>
+                    <li><img src="img/img-lamborghini-veneno-roadster.jpg" alt=""></li>
+                    <li><img src="img/img-ssc-ultimate-aero.jpg" alt=""></li>
+                    <li><img src="img/img-zenvo-st1.jpg" alt=""></li>
+                </ul>
+            </div>
+            <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+            <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+            <p class="jcarousel-pagination"></p>
         </div>
-        <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
-        <a href="#" class="jcarousel-control-next">&rsaquo;</a>
-        <p class="jcarousel-pagination"></p>
+    <!-- jcarousel -->
+
+        <form action="">
+            <div class='selector-title'><label for="">Super car</label></div>
+            <div class='selector-items'>
+                <select>
+                    <option value="option1">Super car1</option>
+                    <option value="option2">Super car2</option>
+                    <option value="option3">Super car3</option>
+                    <option value="option4">Super car4</option>
+                    <option value="option5">Super car5</option>
+                </select>
+            </div>
+
+        </form>
+
+    <!--Select  -->
+
+        <div><label for="ch1">label 1</label><input type="checkbox" class="niceCheck" id="ch1" tabindex="1" /> </div>
+        <div><label for="ch2">label 2</label><input type="checkbox" class="niceCheck" checked="checked" id="ch2" tabindex="2" value="2" /></div>
+        <div><label for="ch3">label 3</label><input type="checkbox" class="niceCheck" id="ch3" checked="checked" disabled="disabled" /></div>
+
     </div>
-</div>
 </body>
 </html>
