--- a/javascript/lab9-10/index.html
+++ b/javascript/lab9-10/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/jquery.jcarousel.js"></script>
     <script src="js/jquery.uniform.js"></script>
+    <script src="js/jquery.checkbox.js"></script>
 
     <script src="js/script.js"></script>
 </head>
@@ -48,9 +49,18 @@
 
     <!--Select  -->
 
-        <div><label for="ch1">label 1</label><input type="checkbox" class="niceCheck" id="ch1" tabindex="1" /> </div>
-        <div><label for="ch2">label 2</label><input type="checkbox" class="niceCheck" checked="checked" id="ch2" tabindex="2" value="2" /></div>
-        <div><label for="ch3">label 3</label><input type="checkbox" class="niceCheck" id="ch3" checked="checked" disabled="disabled" /></div>
+        <div>
+            <label for="jch1">label 1</label>
+            <input type="checkbox" class="niceCheck" id="jch1" tabindex="1" />
+        </div>
+        <div>
+            <label for="jch2">label 2</label>
+            <input type="checkbox" class="niceCheck" checked="checked" id="jch2" tabindex="2" value="2" />
+        </div>
+        <div>
+            <label for="jch3">label 3</label>
+            <input type="checkbox" class="niceCheck" id="jch3" checked="checked" disabled="disabled" />
+        </div>
 
     </div>
 </body>
