--- a/javascript/lab9-10/animate_dropdown_menu/index.html
+++ b/javascript/lab9-10/animate_dropdown_menu/index.html
@@ -9,13 +9,13 @@
 <body>
     <nav class="nav">
         <ul class="menu">
-            <li><a href="#">menu 1</a></li>
-            <li><a href="#">menu 2</a></li>
-            <li><a href="#">menu 3</a>
+            <li class='menu-list'><a href="#">menu 1</a></li>
+            <li class='menu-list'><a href="#">menu 2</a></li>
+            <li class='menu-list'><a href="#">menu 3 &nbsp;</a>
                 <ul class="sub-menu">
                     <li><a href="#">menu 3.1</a></li>
                     <li><a href="#">menu 3.2</a></li>
-                    <li><a href="#">menu 3.3</a>
+                    <li><a href="#">menu 3.3 &nbsp;</a>
                         <ul class="sub-menu">
                             <li><a href="#">menu 3.3.1</a></li>
                             <li><a href="#">menu 3.3.2</a></li>
@@ -30,9 +30,9 @@
                     <li><a href="#">menu 3.6</a></li>
                 </ul>
             </li>
-            <li><a href="#">menu 4</a></li>
-            <li><a href="#">menu 5</a></li>
-            <li><a href="#">menu 6</a></li>
+            <li class='menu-list'><a href="#">menu 4</a></li>
+            <li class='menu-list'><a href="#">menu 5</a></li>
+            <li class='menu-list'><a href="#">menu 6</a></li>
         </ul>
     </nav>
 </body>
