--- a/javascript/lab9-10/animate_dropdown_menu/index.html
+++ b/javascript/lab9-10/animate_dropdown_menu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animate dropdown menu</title>
+    <title>Dropdown menu</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/script.js"></script>
