--- a/javascript/lab15-16/index.html
+++ b/javascript/lab15-16/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="look-for-picture">
 		<form action="#" method="post">
-			<input type="text" class="search">
+			<input type="text" class="search" placeholder="Input your request">
 			<button class='btn'>Search</button>
 		</form>
 		<div class="pictures"></div>
