--- a/javascript/lab21-22/unit_test/index.html
+++ b/javascript/lab21-22/unit_test/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lab 21-22</title>
+    <title>Lab 21-22 unit-test</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
 </body>
