--- a/javascript/lab21-22/lab_es6/index.html
+++ b/javascript/lab21-22/lab_es6/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Lab 21-22</title>
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/script.min.js"></script>
+    <script src="js/tmpl.js"></script>
+    <script src="dist/test.js"></script>
 </head>
 <body>
 <div class="wrapper">
